--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,9 @@
-<h1>Listing posts</h1>
 
+
+
+
+
+<div class='post'>
 <table>
   <tr>
     <th>Title</th>
@@ -18,6 +22,7 @@
   </tr>
 <% end %>
 </table>
+</div>
 
 <br />
 
